html 파일 업데이트

--- a/bin/main/templates/freeboard.html
+++ b/bin/main/templates/freeboard.html
@@ -65,7 +65,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="/freeboardindex">Home</a></li>
         <li><a href="/freeboard">freeboard</a></li>
-        <li><a href="/chat/room">Projects</a></li>
+        <li><a href="/chat/room">Chat</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -125,7 +125,7 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <p>Footer Text</p>
+
 </footer>
 
 </body>
