--- a/bin/main/templates/freeboardwrite.html
+++ b/bin/main/templates/freeboardwrite.html
@@ -122,7 +122,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="/freeboardindex">Home</a></li>
         <li><a href="/freeboard">Freeboard</a></li>
-        <li><a href="/chat/room">Chatting</a></li>
+        <li><a href="/chat/room">Chat</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -158,10 +158,10 @@
 	 </form>
     </div>
     
-<div class="map_wrap" style="margin-left:30%;margin-top:50%;">
+<div class="map_wrap" style="margin-left:10%;margin-top:20%;">
     <div id="map" style="width:50%;height:70%;position:relative;overflow:hidden;"></div>
 
-    <div id="menu_wrap" class="bg_white" style="margin-left:30%;">
+    <div id="menu_wrap" class="bg_white" style="margin-left:50%;">
         <div class="option">
             <div>
                 <form onsubmit="searchPlaces(); return false;">
@@ -189,7 +189,6 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <p>Footer Text</p>
 </footer>
 
 <script>
