--- a/src/main/resources/templates/freeboardindex.html
+++ b/src/main/resources/templates/freeboardindex.html
@@ -58,7 +58,7 @@
         <li class="active"><a href="/freeboardindex">Home</a></li>
         <li th:if= "${session.loginUser == null}"><a href="/loginPage">Freeboard</a></li>
         <li th:if= "${session.loginUser != null}"><a href="/freeboard">Freeboard</a></li>
-        <li><a href="/chat/room">Projects</a></li>
+        <li><a href="/chat/room">Chat</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -96,7 +96,6 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <p>Footer Text</p>
 </footer>
 
 </body>
