--- a/src/main/resources/templates/freeboardinfo.html
+++ b/src/main/resources/templates/freeboardinfo.html
@@ -101,7 +101,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="/freeboardindex">Home</a></li>
         <li><a href="/freeboard">Freeboard</a></li>
-        <li><a href="/chat/room">Chatting</a></li>
+        <li><a href="/chat/room">Chat</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -181,7 +181,6 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <p>Footer Text</p>
 </footer>
 
 
