--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -56,7 +56,8 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/freeboardindex">Home</a></li>
-        <li><a href="/freeboard">Freeboard</a></li>
+        <li th:if= "${session.loginUser == null}"><a href="/loginPage">Freeboard</a></li>
+        <li th:if= "${session.loginUser != null}"><a href="/freeboard">Freeboard</a></li>
         <li><a href="/chat/room">Chatting</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
@@ -97,7 +98,6 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <p>Footer Text</p>
 </footer>
 
 </body>
